<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActividadPrincipal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ivFoto"
                android:src="@drawable/imagen"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"
                android:id="@+id/button"
                android:layout_marginTop="51dp"
                android:layout_below="@+id/ivFoto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:onClick="menosLuz" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:id="@+id/button2"
                android:layout_above="@+id/button4"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:onClick="masLuz" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"
                android:id="@+id/button3"
                android:layout_below="@+id/textView"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:onClick="menosRed" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:id="@+id/button4"
                android:layout_marginRight="28dp"
                android:layout_marginEnd="28dp"
                android:layout_above="@+id/button6"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="masRed" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"
                android:id="@+id/button5"
                android:layout_below="@+id/button3"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:onClick="menosGreen" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:id="@+id/button6"
                android:layout_above="@+id/button8"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:onClick="masGreen" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"
                android:id="@+id/button7"
                android:layout_below="@+id/button5"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:onClick="menosBlue" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:id="@+id/button8"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignLeft="@+id/button6"
                android:layout_alignStart="@+id/button6"
                android:onClick="masBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Luz"
                android:id="@+id/textView"
                android:layout_alignBottom="@+id/button"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Rojo"
                android:id="@+id/textView2"
                android:layout_above="@+id/button6"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Verde"
                android:id="@+id/textView3"
                android:layout_above="@+id/button8"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Azul"
                android:id="@+id/textView4"
                android:layout_alignBottom="@+id/button7"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/flechai"
                android:layout_above="@+id/button2"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:onClick="rotarDer" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/flechad"
                android:layout_above="@+id/button2"
                android:layout_alignRight="@+id/button"
                android:layout_alignEnd="@+id/button"
                android:onClick="rotarIzq" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Guardar"
                android:id="@+id/button9"
                android:layout_marginTop="51dp"
                android:onClick="Guardar"
                android:layout_below="@+id/button8"
                android:layout_alignLeft="@+id/button8"
                android:layout_alignStart="@+id/button8" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_alignBottom="@+id/button9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/button9"
                android:layout_toStartOf="@+id/button9"
                android:hint="@string/Nombre" />

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
